Adding in the following javaArgs into build.gradle:     jvmArgs = ["--add-opens=java.base/java.lang=ALL-UNNAMED"]